--- a/src/components/ProductsSection/ProductsSection.css
+++ b/src/components/ProductsSection/ProductsSection.css
@@ -8,6 +8,18 @@
   width: 100%;
   height: 270px;
   border: 1px solid red;
+  position: relative;
+}
+
+img{
+  width: auto;
+  height: 100%;  
+  overflow: hidden;
+  margin: 0 auto;
+}
+
+.iphones{
+  background: #111;
 }
 
 @media(min-width: 750px){
