--- a/src/components/ProductsSection/ProductsSection.css
+++ b/src/components/ProductsSection/ProductsSection.css
@@ -2,24 +2,38 @@
 .products_section{
   width: 100%;
   position: relative;
+  overflow: hidden;
 }
 
 .product_container{
   width: 100%;
   height: 270px;
-  border: 1px solid red;
   position: relative;
 }
 
-img{
+.product_container img{
   width: auto;
   height: 100%;  
   overflow: hidden;
   margin: 0 auto;
+  position: absolute;
+  left: calc(50% - 160px);
 }
 
 .iphones{
   background: #111;
+}
+
+.watches{
+  background: #f9f9f9;
+}
+
+.imacs{
+  background: #f9f9f9;
+}
+
+.accessories{
+  background: #f9f9f9;
 }
 
 @media(min-width: 750px){
@@ -32,5 +46,9 @@ img{
 @media(min-width: 1050px){
   .product_container{
     width: 25%;
+  }
+  .product_container img{
+    position: absolute;
+    left: 1%;
   }
 }
