--- a/src/components/Footer/BottomFooter/BottomFooter.css
+++ b/src/components/Footer/BottomFooter/BottomFooter.css
@@ -1,11 +1,13 @@
 .bottom_footer{
-    width: 90%;
+    width: 96%;
     margin: 0 17px;
     padding: 30px 0px 28px 0px;
+    position: relative;
 }
 
 .bf_shop_words{
     width: 100%;
+    height: 22px;
     font-size: 11.3px;
 }
 
@@ -22,7 +24,7 @@
     width: 88px;
     height: 16px;
     font-size: 11.3px;
-    margin-top: 16px;
+    margin-top: 6px;
     display: flex;
     justify-content: space-between;
     color: #666;
@@ -66,11 +68,30 @@
         border-bottom: 1px solid #ddd;
     }
 
+    .usflag_div{
+        position: absolute;
+        right: 0px;
+        top: 52px;
+    }
+
+    .copyright_p{
+        margin-top: 10px;
+    }
+
+}
+
+@media(min-width: 850px){
+    .bottom_footer_list{
+        position: absolute;
+        left: 264px;
+        bottom: 28px;
+    }
 }
 
 @media(min-width: 1050px){
     
     .bottom_footer{
+        width: 980px;
         margin: 0 auto;
     }
 
