fixed styling on top footer to be responsive

--- a/src/components/Footer/TopFooter/TopFooter.css
+++ b/src/components/Footer/TopFooter/TopFooter.css
@@ -2,23 +2,31 @@
     width: 96%;
     margin: 0 17px;
     position: relative;
-    padding-top: 20px;
+    padding-top: 5px;
 }
 
 .top_footer_list{
     width: 100%;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
 }
 
 .top_footer_column{
-    width: 140px;
+    width: 100%;
 }
 
 @media(min-width: 770px){
+    .top_footer{
+        padding-top: 20px;
+    }
+
     .top_footer_list{
         width: 94%;
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+
+    .top_footer_column{
+        width: 140px;
     }
 }
 
