--- a/src/components/Footer/TopFooter/FooterTopic/FooterTopic.css
+++ b/src/components/Footer/TopFooter/FooterTopic/FooterTopic.css
@@ -1,14 +1,18 @@
 
 .footer_topic{
     width: 100%;
-    margin-top: 18px;
+    margin-top: 11px;
     line-height: 12px;
     font-size: 11px;
     color: #555;
 }
 
 .footer_topic h1{
-    border: 1px solid red;
+    width: 98%;
+    height: 27px;
+    font-size: 12px;
+    color: #111;
+    border-bottom: 1px solid #ccc;
 }
 
 .footer_topic p{
@@ -16,7 +20,7 @@
 }
 
 
-@media(min-width: 750px){
+@media(min-width: 770px){
     .footer_topic{
         width: 120px;
         margin-top: 18px;
@@ -26,8 +30,12 @@
     }
 
     .footer_topic h1{
+        font-size: 11px;
         font-weight: bold;
         color: black;
+        width: auto;
+        height: auto;
+        border-bottom: none;
     }
 
     .footer_topic p{
